--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
-# files in all subfolders
+# files in all subfolders.
 .classpath
 .factorypath
 .project
 
-# files in the root folder only
+# files in the root folder only.
 /*.iml
 
-# folders in all subfolders
+# folders in all subfolders.
 /target/
 
-# folders in the root rolder only
+# folders in the root rolder only.
 /.idea/
 /.settings/
